- z-index für switchDisply (ie bugfix)

--- a/Vps_js/Switch/Display.css
+++ b/Vps_js/Switch/Display.css
@@ -6,4 +6,5 @@ div.vpsSwitchDisplay a.switchLink.switchLinkOpened {
     background: url(/assets/silkicons/bullet_arrow_up.png) 0px -2px no-repeat;
 
 }
-div.vpsSwitchDisplay div.switchContent { overflow: hidden; }
+div.vpsSwitchDisplay div.switchContent { overflow: hidden; z-index: 1000; position: relative; }
+div.vpsSwitchDisplay div.switchContent img { position: relative; z-index: 500;}
